add script that has a forEach loop within another forEach loop and display various iterations of the suit arrays

--- a/index.html
+++ b/index.html
@@ -10,10 +10,40 @@
     <title>Deck of Cards Sorted by For Loops</title>
   </head>
   <body>
-    <div id="cards">
-      <ul id="deck">
-        
-      </ul>
+    <div class="container">
+      <h1>Deck of Cards</h1>
+      <div class="row">
+        <div class="col-2">
+          <h5 class="fullDeckHead">Full Deck</h5>
+          <ul id="fullDeck" class="fullDeck cardName">
+
+          </ul>
+        </div>
+        <div class="col-2">
+          <h5>Clubs</h5>
+          <ul id="clubs" class="cardName">
+
+          </ul>
+        </div>
+        <div class="col-2">
+          <h5>Diamonds</h5>
+          <ul id="diamonds" class="cardName">
+
+          </ul>
+        </div>
+        <div class="col-2">
+          <h5>Spades</h5>
+          <ul id="spades" class="cardName">
+
+          </ul>
+        </div>
+        <div class="col-2">
+          <h5>Hearts</h5>
+          <ul id="hearts" class="cardName">
+
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
